# i3lock-extended

./: .gitignore  CHANGELOG  I3LOCK_VERSION  LICENSE  Makefile.am  README.md  configure.ac  extras.c  extras.h  i3lock-extended.1  i3lock.c  meson.build  unlock_indicator.c
include/: extras.h  i3lock.h
meson/: meson-dist-script
